# simon-portfolio-blog

./: docker-compose.yaml
kubernetes/: client-api.yaml  client.yaml
services/admin-api/: .dockerignore  Dockerfile  makefile  manage.py  pyproject.toml  setup.cfg
services/admin-api/Helpers/: admin.auth.login.post.http  admin.blogs.delete.http  admin.blogs.post.http  admin.blogs.put.http  admin.comment.delete.http  alive.http
services/admin-api/docs/adr/: 0000-record-architecture-decisions.md  0001-database-choice.md  0002-framework-choice.md  (+4 more)
services/admin-api/project/: __init__.py
services/admin/blog-admin-portfolio/: README.md  package-lock.json  package.json  vite.config.js
services/client-api/: .dockerignore  .pre-commit-config.yaml  manage.py  pyproject.toml  setup.cfg
services/client-api/project/: __init__.py  config.py  schema.py
services/client-api/tests/: conftest.py  test_alive.py  test_schema.py
services/client/blog-portfolio/: .dockerignore  Dockerfile  README.md  nuxt.config.js  package-lock.json  package.json
services/gateway/: .gitignore  Dockerfile  Readme.md  makefile  manage.py  pyproject.toml
services/gateway/docs/adr/: adr-001-database-choice.md
services/gateway/docs/api/: openapi.yaml
services/gateway/project/: __init__.py
services/gateway/project/core/: config.py  jwt.py  requests.py  route.py
services/gateway/project/models/: admin.py  client.py
services/gateway/project/router/: __init__.py  admin.py  alive.py  client.py
services/gateway/project/utils/: recaptcha.py
services/nginx/: Dockerfile  dev.default.conf
(+58 files in other folders)
